@@ -1,5 +1,11 @@
 2018-07-30 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCval.c,
+	  support/regression/tests/gcc-torture-execute-wchar_t-1.c,
+	  Fix bug #2792.
+
+2018-07-30 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCglue.c,
 	  support/regression/tests/gcc-torture-execute-wchar_t-1.c,
 	  support/regression/tests/gcc-torture-execute-widechar-2.c:
